## $Id: Makefile.am,v 1.3 2000-05-18 11:55:47 adam Exp $

tabdatadir = $(pkgdatadir)/tab
tabdata_DATA = bib1.att dan1.att danmarc.abs danmarc.mar \
 explain.abs explain.att explain.tag generic.tag gils-a.est \
 gils-b.est gils-f.est gils-g.est \
 gils-summary.map gils-usmarc.map gils-variant.est gils.abs gils.att \
 gils.tag meta-b.est meta-usmarc.map meta.abs meta.tag summary.abs \
 summary.tag tagsetg.tag tagsetm.tag usmarc-b.est usmarc.abs usmarc.mar \
 usmarc.tag var1.var wais-b.est wais-variant.est wais.abs 

EXTRA_DIST =  bib1.att dan1.att danmarc.abs danmarc.mar \
 explain.abs explain.att explain.tag generic.tag gils-a.est \
 gils-b.est gils-f.est gils-g.est \
 gils-summary.map gils-usmarc.map gils-variant.est gils.abs gils.att \
 gils.tag meta-b.est meta-usmarc.map meta.abs meta.tag summary.abs \
 summary.tag tagsetg.tag tagsetm.tag usmarc-b.est usmarc.abs usmarc.mar \
 usmarc.tag var1.var wais-b.est wais-variant.est wais.abs 

