## $Id: Makefile.am,v 1.10 2003-02-18 10:37:08 adam Exp $
## Copyright (C) 2001, Index Data

AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_PROGRAMS = zoomtst1 zoomtst2 zoomtst3 zoomtst4 zoomtst5 zoomtst6 zoomtst7 zoomtst8
bin_PROGRAMS = zoomsh

LDADD = ../lib/libyazmalloc.la ../lib/libyaz.la $(READLINE_LIBS)

zoomtst1_SOURCES = zoomtst1.c
zoomtst2_SOURCES = zoomtst2.c
zoomtst3_SOURCES = zoomtst3.c
zoomtst4_SOURCES = zoomtst4.c
zoomtst5_SOURCES = zoomtst5.c
zoomtst6_SOURCES = zoomtst6.c
zoomtst7_SOURCES = zoomtst7.c
zoomtst8_SOURCES = zoomtst8.c
zoomsh_SOURCES = zoomsh.c
