## $Id: Makefile.am,v 1.19 2003-01-06 08:20:27 adam Exp $

pkginclude_HEADERS= backend.h ccl.h cql.h comstack.h \
 diagbib1.h sortspec.h log.h logrpn.h marcdisp.h nmem.h odr.h oid.h \
 options.h otherinfo.h pquery.h prt-ext.h readconf.h srw-util.h statserv.h \
 tcpip.h unix.h tpath.h wrbuf.h xmalloc.h \
 yaz-ccl.h yaz-iconv.h yaz-util.h yaz-version.h yconfig.h proto.h \
 \
 ill.h ill-core.h item-req.h z-accdes1.h z-accform1.h \
 z-acckrb1.h z-core.h z-date.h z-diag1.h z-espec1.h z-estask.h z-exp.h \
 z-grs.h z-mterm2.h z-opac.h z-rrf1.h z-rrf2.h z-sum.h z-sutrs.h z-uifr1.h \
 z-univ.h zes-expi.h zes-exps.h zes-order.h zes-pquery.h \
 zes-psched.h zes-admin.h zes-pset.h zes-update.h zes-update0.h \
 zoom.h z-charneg.h charneg.h

